--- a/client/src/scss/blocks/services.scss
+++ b/client/src/scss/blocks/services.scss
@@ -52,9 +52,9 @@
   }
 }
 @media (max-width: 768px) {
-  .services .title {
-    // margin-bottom: 25px;
-  }
+  // .services .title {
+  //   // margin-bottom: 25px;
+  // }
   .services::after {
     font-size: 180px;
     right: -45%;
