--- a/client/src/scss/blocks/header.scss
+++ b/client/src/scss/blocks/header.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   height: 110px;
-  padding: 0 14%;
+  padding: 0 12%;
   z-index: 9999;
 
   & > div:first-of-type {
@@ -63,7 +63,7 @@
 }
 .header__phone {
   margin: 0 5%;
-  font-size: 16px;
+  font-size: 18px;
   transition: ease 0.25s;
 
   &:hover {
@@ -71,7 +71,7 @@
   }
 }
 
-@media (max-width: 1340px) {
+@media (max-width: 1366px) {
   .header__nav {
     display: none;
   }
@@ -92,9 +92,13 @@
     font-size: 14px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   .header {
     padding: 0 5%;
+  }
+}
+@media (max-width: 768px) {
+  .header {
     height: 100px;
 
     .button {
